--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ main{
     width: 180px;
     align-self: center;
     border: 2px solid black;
+    font-weight: 550;
     cursor: pointer
 }
 
@@ -106,6 +107,7 @@ main{
 }
 
 .submitBtn{
+    font-weight: 550;
     cursor: pointer;
 }
 
